perf: fix measured platform bottlenecks